tests/snapshots/run_wpt_conformance__trtx_reduceSumSquare_float16_4D_tensor_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_sum_square.https.any.js",
    "reduceSumSquare float16 4D tensor options.keepDimensions=false",
    "trtx",
    "PASS",
)
