tests/snapshots/run_wpt_conformance__trtx_reduceSumSquare_float32_0D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_sum_square.https.any.js",
    "reduceSumSquare float32 0D constant tensor default options",
    "trtx",
    "PASS",
)
