tests/snapshots/run_wpt_conformance__trtx_reduceSumSquare_float32_0D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "reduce_sum_square.https.any.js",
    "reduceSumSquare float32 0D constant tensor empty axes",
    "trtx",
    Failed {
        msg: Some(
            "Failed to read tensor: DriverError(CUDA_ERROR_INVALID_VALUE, \"invalid argument\")\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  consts {\n    operand_0: f32[] @bytes([3, 63, 82, 66]);\n  }\n\n  nodes {\n    [reduceSumSquareOutput] = reduceSumSquare(operand_0, axes=[], keepDimensions=false, label=\"\");\n  }\n\n  outputs { reduceSumSquareOutput; }\n}\n",
        ),
    },
)
